[tool.poetry]
name = "smitestat"
version = "0.1.0"
description = "smite stats"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/smitestat"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pendulum = "^2.1.2"
pydantic = "^1.10.8"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
